--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -33,7 +33,7 @@ jobs:
 
       - name: Update graphs
         run: |
-          git config user.name 'github-actions'
-          git config user.email 'github-actionse@github.com'
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git commit -am "Update Notebook"
           git push
