--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pandas = "^2.1.0"
 ipykernel = "^6.25.2"
 jupyter = "^1.0.0"
 seaborn = "^0.12.2"
+scikit-learn = "^1.3.0"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "*"
