--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,20 +3,28 @@ name = "acs2500"
 version = "1.0.0"
 description = ""
 authors = ["Dj Isaac <demetrius.isaac@students.dominican.edu>"]
-license = "CC BY-SA 4.0"
+license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
-numpy = "^1.25.2"
-pandas = "^2.1.0"
+python = "^3.11,<3.13"
+numpy = "^1.25.0"
+pandas = {extras = ["compression", "performance"], version = "^2.1.0"}
 ipykernel = "^6.25.2"
 jupyter = "^1.0.0"
 seaborn = "^0.12.2"
-scikit-learn = "^1.3.0"
+scikit-learn = "^1.3.1"
+tqdm = "^4.66.1"
+dask = {extras = ["distributed", "dataframe", "diagnostics"], version= "^2023.9.3"}
+dask-geopandas = "^0.3.1"
+hvplot = "^0.8.4"
+geopandas = "^0.14.0"
+datashader = "^0.15.2"
+cartopy = "^0.22.0"
+geoviews = "^1.10.1"
 
 [tool.poetry.group.dev.dependencies]
-ipykernel = "*"
+ipykernel = "^6.25.2"
 
 [build-system]
 requires = ["poetry-core"]
