--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ geopandas = "^0.14.0"
 datashader = "^0.15.2"
 cartopy = "^0.22.0"
 geoviews = "^1.10.1"
+pytz = "^2023.3.post1"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.25.2"
